refactor: simplify user flow messages and enhance bank account validation in order processing